un-minify three.js

--- a/iss-sim.spacex.com/index.html
+++ b/iss-sim.spacex.com/index.html
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="css/layout.min.css" media="screen">
 
-	<script type="text/javascript" src="js/three/three.min.js"></script>
+	<script type="text/javascript" src="js/three/three.js"></script>
 	<script type="text/javascript" src="js/three/WebGL.js"></script>
 	<script type="text/javascript" src="js/three/GLTFLoader.js"></script>
 	<script type="text/javascript" src="js/three/CSS2DRenderer.js"></script>
