un-minimized css files

--- a/iss-sim.spacex.com/index.html
+++ b/iss-sim.spacex.com/index.html
@@ -33,8 +33,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="css/layout.min.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
 
 	<script type="text/javascript" src="js/three/three.js"></script>
 	<script type="text/javascript" src="js/three/WebGL.js"></script>
